# rospy_markerutils

./: CMakeLists.txt  package.xml  readme.md  setup.py
rospy_markerutils/: __init__.py  distinct_colors.py  helper.py  interactive.py  make_markers.py
scripts/: display_endpts_trajectory_csv  display_trajectory_csv
