<?xml version="1.0"?>
<package format="2">
  <name>rospy_markerutils</name>
  <version>0.0.0</version>
  <description>The rospy_markerutils package</description>

  <maintainer email="dimatura@cmu.edu">Daniel Maturana</maintainer>

  <license>BSD</license>

  <author email="dimatura@cmu.edu">Daniel Maturana</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>rospy_geomutils</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
